--- a/ArticleTemplates/css/style.css
+++ b/ArticleTemplates/css/style.css
@@ -8487,7 +8487,6 @@ aside {
     color: #e02b7f; }
   #standard-article[class*="feature"] .article .article__header .article__meta {
     color: rgba(255, 255, 255, 0.9);
-    background-color: #e02b7f;
     border: 0 none;
     -webkit-order: 6;
     order: 6; }
@@ -8503,7 +8502,7 @@ aside {
           padding-left: 5.26316%; } }
     #standard-article[class*="feature"] .article .article__header .article__meta .article__comments {
       color: #fff;
-      border-left: 1px solid #951c55; }
+      border-left: 1px solid #f6f6f6; }
   #standard-article[class*="feature"] .article .article__header .article__image {
     -webkit-order: 1;
     order: 1;
@@ -8594,13 +8593,15 @@ aside {
     #standard-article[class*="feature"] .article .article__header .article__standfirst,
     #standard-article[class*="feature"] .article .article__header .article__byline,
     #standard-article[class*="feature"] .article .article__header .article__review-rating {
-      padding-left: 7.04225%; } }
+      padding-left: 7.04225%;
+      padding-right: 7.04225%; } }
   @media all and (min-width: 56.25em) {
     #standard-article[class*="feature"] .article .article__header .inner-header,
     #standard-article[class*="feature"] .article .article__header .article__standfirst,
     #standard-article[class*="feature"] .article .article__header .article__byline,
     #standard-article[class*="feature"] .article .article__header .article__review-rating {
-      padding-left: 5.26316%; } }
+      padding-left: 5.26316%;
+      padding-right: 5.26316%; } }
 #standard-article[class*="feature"] .article .article__body > p:first-of-type:first-letter {
   font-family: "Egyptian Display", Georgia, serif;
   font-weight: 100;
@@ -8669,7 +8670,7 @@ aside {
   border-top-color: #4e0375; }
   .feature1 .article .article__header {
     background-color: #4e0375; }
-  .feature1 .article .article__pubdate {
+  .feature1 .article .article__meta {
     background-color: #8006c2; }
   .feature1 .article .article__body > p:first-of-type:first-letter {
     color: #4e0375; }
@@ -8691,7 +8692,7 @@ aside {
   border-top-color: #7d0068; }
   .feature2 .article .article__header {
     background-color: #7d0068; }
-  .feature2 .article .article__pubdate {
+  .feature2 .article .article__meta {
     background-color: #c900a8; }
   .feature2 .article .article__body > p:first-of-type:first-letter {
     color: #7d0068; }
@@ -8713,7 +8714,7 @@ aside {
   border-top-color: #951c55; }
   .feature3 .article .article__header {
     background-color: #951c55; }
-  .feature3 .article .article__pubdate {
+  .feature3 .article .article__meta {
     background-color: #e02b7f; }
   .feature3 .article .article__body > p:first-of-type:first-letter {
     color: #951c55; }
